--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@selfage/stateful_navigator",
-  "version": "0.0.1",
-  "description": "Navigate web apps with observable state.",
+  "version": "1.0.0",
+  "description": "Navigate with observable state tracked in browser history.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/teststaybaka/stateful_navigator.git"
@@ -11,6 +11,11 @@
     "Stateful",
     "Navigation",
     "Navigator",
+    "Observable",
+    "Browser",
+    "History",
+    "Back",
+    "Popstate",
     "TypeScript"
   ],
   "author": "Yuxuan Xie <teststaybaka@gmail.com> (http://www.yuxuanxie.com)",
@@ -33,6 +38,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@selfage/message": "^2.0.1"
+    "@selfage/message": "^2.0.1",
+    "@selfage/once": "^1.0.1"
   }
 }
