--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/stateful_navigator",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Navigate with observable state tracked in browser history.",
   "repository": {
     "type": "git",
@@ -38,7 +38,6 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@selfage/message": "^2.0.1",
-    "@selfage/once": "^1.1.0"
+    "@selfage/message": "^2.0.1"
   }
 }
