--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/stateful_navigator",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Navigate with observable state tracked in browser history.",
   "repository": {
     "type": "git",
@@ -33,11 +33,11 @@
     "!test_data/**/*"
   ],
   "devDependencies": {
-    "@selfage/cli": "^2.3.2",
+    "@selfage/cli": "^4.0.0",
     "@selfage/tsconfig": "^1.0.7",
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@selfage/message": "^2.2.0"
+    "@selfage/observable": "^1.0.2"
   }
 }
